# eurorust-2024-diesel-workshop

./: .gitignore  Cargo.toml  slides.html
assets/: custom.css
locales/de/: main.ftl
locales/en-US/: main.ftl
migrations/2024-06-29-160034_initial_migration/: down.sql  up.sql
migrations/2024-10-07-085949_switch_to_uuid/: down.sql  up.sql
src/: app_state.rs  axum_ext.rs  competition_overview.rs  errors.rs  lib.rs  main.rs  registration.rs  registration_list.rs  service_config.rs
src/admin/: categories.rs  competitions.rs  mod.rs  participants.rs  races.rs  special_categories.rs  starts.rs  user.rs
src/admin/user/: auth_session.rs  sqlite_session_store.rs
src/database/: diesel_ext.rs  mod.rs  schema.patch  schema.rs  shared_models.rs  test_data.rs
templates/: admin_category_list.html  admin_competition_list.html  admin_list_races.html  admin_list_special_categories.html  admin_list_starts.html  admin_participant_list.html  base.html  competition_list.html  create_competition.html  edit_category.html  edit_race.html  edit_special_category.html  edit_start.html  login.html  registration.html  registration_list.html
tests/: competition_list.rs  lib.rs  registration.rs
