[package]
name = "race_timing"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
argon2 = "0.5.2"
async-trait = "0.1"
axum = { version = "0.7.5", features = ["tracing", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-login = "0.16"
clap = { version = "4.5.8", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
deadpool-sync = "0.1"
diesel = { version = "2.2.0", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time"] }
libsqlite3-sys = { version = "0.30.0", features = ["bundled"] }
tokio = {version = "1.38.0", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
time = "0.3"
thiserror = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing = "0.1"
tower-http = { version = "0.6", features = ["trace"]}
minijinja = { version = "2", features = ["loader"] }
diesel_migrations = "2.2"
rand = "0.8"
fluent-templates = "0.11"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
serde_urlencoded = "0.7"

[[test]]
path = "tests/lib.rs"
name = "integration_tests"

[lints.clippy]
used_underscore_binding = "deny"
unwrap_used = "deny"
unnested_or_patterns = "warn"
unused_async = "warn"
large_futures = "warn"
dbg_macro = "warn"

[lints.rust]
missing_docs = "allow"
unsafe_op_in_unsafe_fn = "deny"
